# soft-cookiecutter

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
{{cookiecutter.project_name}}/.github/ISSUE_TEMPLATE/: feature_request.md  question.md
{{cookiecutter.project_name}}/.github/workflows/: ci.yml  publish.yml  smokeshow.yml  test-suite.yml
{{cookiecutter.project_name}}/dockerfiles/: PBRDockerfile  PoetryDockerfile
{{cookiecutter.project_name}}/docs/: conf.py  index.md  index.rst  ipython_init.py  reference.md
{{cookiecutter.project_name}}/docs/_static/css/: custom_theme.css
{{cookiecutter.project_name}}/docs/notes/: quickstart.rst
{{cookiecutter.project_name}}/docs/src/: cli.rst
{{cookiecutter.project_name}}/licenses/: BSD-2-Clause  BSD-3-Clause  MIT
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: cli.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py
