[metadata]
name = {{ cookiecutter.project_name }}
author = See AUTHORS
author-email = "TODO@gmail.com"
summary = {{ cookiecutter.project_short_description }}
description-file = README.rst
home-page = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}
classifier =
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    License :: {{ cookiecutter.open_source_license }}
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages = {{ cookiecutter.project_slug }}

# add datafile to be included in your distribution packages here, ex:
#data-files =
#    data = data/*
#    frontend = frontend/dist/*

## CLI settings
#[entry_points]
#console_scripts =
#    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cli:__main__

[build_sphinx]
project = {{ cookiecutter.project_slug }}
source-dir = docs
build-dir = docs/build

[upload_sphinx]
upload-dir = docs/_build/html

[pbr]
warnerrors = True

[wheel]
universal = 1

[flake8]
exclude = */migrations/*,*/south_migrations/*

[isort]
line_length = 100

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    .eggs
    .cache
    dist
    build
    south_migrations
    migrations
    chunk_scripts
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    --tb=short
    --cov-report=term-missing
    --cov={{ cookiecutter.project_name }}
