[metadata]
name = {{ cookiecutter.project_name }}
author = See AUTHORS
author-email = "TODO@gmail.com"
summary = {{ cookiecutter.project_short_description }}
description-file = README.rst
home-page = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}
classifier =
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    {% if cookiecutter.open_source_license.lower() == 'mit license' %}
      License :: OSI Approved :: MIT License
    {% elif cookiecutter.open_source_license.lower() == 'bsd license' %}
      License :: OSI Approved :: BSD License
    {% endif %}
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages = {{ cookiecutter.project_slug }}

# add datafile to be included in your distribution packages here, ex:
#data-files =
#    data = data/*
#    frontend = frontend/dist/*

## CLI settings
#[entry_points]
#console_scripts =
#    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cli:__main__

[build_sphinx]
project = {{ cookiecutter.project_slug }}
source-dir = docs
build-dir = docs/build

[upload_sphinx]
upload-dir = docs/_build/html

[pbr]
warnerrors = True

[wheel]
universal = 1

[flake8]
exclude = */migrations/*,*/south_migrations/*
max-line-length = 100
ignore =
  # W503: line break before binary operator
  W503,

  # W504: line break after binary operator
  W504,

[isort]
line_length = 100

[yapf]
indent_dictionary_value = true
allow_split_before_dict_value = false

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    .eggs
    .cache
    dist
    build
    south_migrations
    migrations
    chunk_scripts
python_files =
    test_*.py
    *_test.py
    tests.py
