[metadata]
name = {{ cookiecutter.project_name }}
author = See AUTHORS
author-email = "TODO@gmail.com"
summary = {{ cookiecutter.project_short_description }}
description-file = README.md
long_description_content_type = text/markdown

home-page = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}
classifier =
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    {% if cookiecutter.open_source_license.lower() == 'mit license' %}
    License :: OSI Approved :: MIT License
    {% elif cookiecutter.open_source_license.lower() == 'bsd license' %}
    License :: OSI Approved :: BSD License
    {% endif %}
    Programming Language :: Python
    Programming Language :: Python :: 3.7

[files]
packages = {{ cookiecutter.project_slug }}

# add datafile to be included in your distribution packages here, ex:
#data-files =
#    data = data/*
#    frontend = frontend/dist/*

## CLI settings
#[entry_points]
#console_scripts =
#    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cli:__main__

[pbr]
warnerrors = True

[wheel]
universal = 1

[flake8]
exclude = */migrations/*,*/south_migrations/*,.git,__pycache__,build,dist,.eggs
max-line-length = 100
ignore =
  # W503: line break before binary operator
  W503,

  # W504: line break after binary operator
  W504,

  # E203: whitespace before ':'
  E203,

  # A001 "id" is a python builtin and is being shadowed, consider renaming the variable
  A001,

  # A002 "type" is used as an argument and thus shadows a python builtin, consider renaming the argument
  A002,

  # A003 "id" is a python builtin, consider renaming the class attribute
  A003,

[isort]
line_length = 100

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    .eggs
    .cache
    dist
    build
    south_migrations
    migrations
    chunk_scripts
